<resources>
    <string name="app_name">HOME</string>

    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="settings">设置</string>
    <string name="wandnet">无线和网络</string>
    <string name="wifi">WLAN</string>
    <string name="bluetooth">蓝牙</string>
    <string name="condition">流量使用情况</string>
    <string name="more">更多</string>
    <string name="customize">个性化设置</string>
    <string name="show">显示</string>
    <string name="ustomize">用户自定义</string>
    <string name="volume">音量键自定义</string>
    <string name="safety">安全</string>
    <string name="date_tine">日期和时间</string>
    <string name="set_sound_notification">提示音和通知</string>
    <string name="set_language_input">语言和输入法</string>
    <string name="set_other_more">其他设置</string>
    <string name="equipment">设备</string>
    <string name="set_app">应用程序管理</string>
    <string name="set_accessible">无障碍</string>
    <string name="set_developer_options">开发者选项</string>
    <string name="set_about_device">关于设备</string>
</resources>
