<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    android:orientation="vertical"
    tools:context="com.szfp.home.SettingActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24px"
        android:paddingBottom="24px"
        android:paddingLeft="38px"
        android:textSize="21sp"
        android:background="@color/mintcream"
        android:textColor="@color/black"
        android:text="@string/settings"/>
    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20px"
                android:paddingBottom="20px"
                android:paddingLeft="30px"
                android:textSize="16sp"
                android:background="@color/gainsboro"
                android:textColor="@color/black"
                android:text="@string/wandnet"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:id="@+id/set_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/wifi"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>


            <TextView
                android:id="@+id/set_bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_bluetooth_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/bluetooth"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>


            <TextView
                android:id="@+id/set_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_check_circle_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/condition"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:id="@+id/set_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_more_horiz_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/more"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20px"
                android:paddingBottom="20px"
                android:paddingLeft="30px"
                android:textSize="16sp"
                android:background="@color/gainsboro"
                android:textColor="@color/black"
                android:text="@string/ustomize"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:id="@+id/set_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/show"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>
            <TextView
                android:id="@+id/set_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/volume"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>
            <TextView
                android:id="@+id/set_safety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/safety"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>
            <TextView
                android:id="@+id/set_date_tine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/date_tine"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>
            <TextView
                android:id="@+id/set_sound_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/set_sound_notification"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>
            <TextView
                android:id="@+id/set_language_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/set_language_input"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:id="@+id/set_other_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_more_horiz_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/set_other_more"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20px"
                android:paddingBottom="20px"
                android:paddingLeft="30px"
                android:textSize="16sp"
                android:background="@color/gainsboro"
                android:textColor="@color/black"
                android:text="@string/equipment"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:id="@+id/set_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_wifi_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/set_app"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>


            <TextView
                android:id="@+id/set_accessible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_bluetooth_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/set_accessible"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>


            <TextView
                android:id="@+id/set_developer_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_check_circle_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/set_developer_options"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/slategray"/>

            <TextView
                android:id="@+id/set_about_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24px"
                android:drawableLeft="@drawable/ic_more_horiz_black_24dp"
                android:drawablePadding="33px"
                android:paddingBottom="24px"
                android:paddingLeft="38px"
                android:drawableRight="@drawable/ic_right_black_24dp"
                android:textSize="21sp"
                android:background="@color/mintcream"
                android:textColor="@color/black"
                android:text="@string/set_about_device"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
